kubeadm/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        # To specify how much cpu and ram it takes and what should be the maximum it takes
        resources:
          requests:
            cpu: 100m
            memory: 128mi
          limits:
            cpu: 200m
            memory: 256mi
        # Added persistent volume for data backup
        volumeMounts:
        - mountPath: /var/www/html
          name: my-volume
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          # This name should be persistent volume claim name
          claimName: local-pvc
