kubeadm/deploymet-netflix-router.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: netflix-deployment
  namespace: netflix-app
  labels:
    app: netflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: netflix
    spec:
      containers:
      - name: netflix
        image: tarasankar393/netflix-node-app
        ports:
        - containerPort: 8000
