kubeadm/service-netflix-router.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-app
  namespace: netflix-app
spec:
  selector:
    app: netflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
